# diagram-analysis

./: README.md  pyproject.toml  pyrightconfig.json
diagram_analysis/: agent.py  tools.py
diagramm_text_roi_extraction/: main.py
test/test_imgs/: show_img.py
