[tool.poetry]
name = "diagram-analysis"
version = "0.1.0"
description = ""
authors = ["Artur Dernst <artur.dernst@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.3.0"
pytesseract = "^0.3.13"
langchain = "^0.3.26"
langgraph = "^0.5.3"
numpy = "^2.3.1"
langchain-openai = "^0.3.28"
langchain-community = "^0.3.27"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
